--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+}
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 110px;
+    border-bottom: 1px solid rgba(200, 200, 200, 0.5);
+    background-color: lightblue;
+    box-shadow: 0 0 10px black;
+}
+.titre{
+    font-size: 2em;
+    color: gray;
+    margin-left: 10px;
+    margin-top: 35px;
+}
 h1{
     color: red;
     font-size: 1.5em;
