--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     background-color: white;
 }
+
 header {
     display: flex;
     flex-direction: row;
@@ -15,29 +16,34 @@ header {
     background-color: lightblue;
     box-shadow: 0 0 10px black;
 }
-.titre{
+
+.titre {
     font-size: 2em;
     color: gray;
     margin-left: 10px;
     margin-top: 35px;
 }
-h1{
-    color: red;
+
+h1 {
+    color: red !important;
     font-size: 1.5em;
     margin-left: 10px;
 }
-.contenu{
+
+.contenu {
     width: 500px;
     margin: 10px;
     text-align: justify;
 }
-.auteur{
+
+.auteur {
     width: 500px;
     font-size: 0.8em;
     color: blue;
     text-align: right;
 }
-.date{
+
+.date {
     width: 500px;
     font-size: 0.8em;
     color: green;
