--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ h1 {
     font-size: 1.5em;
     margin-left: 10px;
 }
+li{
+    margin-top: 10px;
+}
 
 .contenu {
     width: 500px;
@@ -43,7 +46,7 @@ h1 {
     text-align: right;
 }
 
-.date {
+.date_billet {
     width: 500px;
     font-size: 0.8em;
     color: green;
