--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header {
     width: 100%;
     height: 110px;
     border-bottom: 1px solid rgba(200, 200, 200, 0.5);
-    background-color:lightblue;
+    background-color: lightblue;
     box-shadow: 0 0 10px black;
 }
 
@@ -29,15 +29,18 @@ h1 {
     font-size: 1.5em;
     margin-left: 10px;
 }
-h2{
-    margin-top: 20px;
+
+h2 {
+    margin-top: 25px;
+    text-align: center;
 }
-li{
+
+li {
     margin-top: 10px;
 }
 
 .contenu {
-    width: 500px;
+    width: 100%;
     margin: 10px;
     text-align: justify;
     background-color: antiquewhite;
@@ -46,7 +49,7 @@ li{
 }
 
 .auteur {
-    width: 500px;
+    width: 100%;
     font-size: 0.8em;
     color: blue;
     text-align: right;
@@ -59,55 +62,60 @@ li{
     text-align: left;
     margin-left: 10px;
 }
+
 /*********************FORMULAIRE AJOUT BILLET****************************/
+
 form {
-  /* Uniquement centrer le formulaire sur la page */
-
-  width: 333px;
-  /* Encadré pour voir les limites du formulaire */
-  padding: 1em;
-  border: 1px solid #CCC;
-  border-radius: 1em;
+    margin: 0 auto;
+    width: 635px;
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 0.5em;
 }
+
 label {
-  /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
-  display: inline-block;
-  width: 90px;
-  text-align: left;
+    /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
+    display: inline-block;
+    width: 190px;
+    text-align: left;
 }
 
-input, textarea {
-  /* Pour s'assurer que tous les champs texte ont la même police.
+input,
+textarea {
+    /* Pour s'assurer que tous les champs texte ont la même police.
      Par défaut, les textarea ont une police monospace */
-  font: 1em sans-serif;
+    font: 1em sans-serif;
 
-  /* Pour que tous les champs texte aient la même dimension */
-  width: 300px;
-  box-sizing: border-box;
+    /* Pour que tous les champs texte aient la même dimension */
+    width: 600px;
+    box-sizing: border-box;
 
-  /* Pour harmoniser le look & feel des bordures des champs texte */
-  border: 1px solid #999;
+    /* Pour harmoniser le look & feel des bordures des champs texte */
+    border: 1px solid #999;
 }
 
-input:focus, textarea:focus {
-  /* Pour souligner légèrement les éléments actifs */
-  border-color: #000;
+input:focus,
+textarea:focus {
+    /* Pour souligner légèrement les éléments actifs */
+    border-color: #000;
 }
 
 textarea {
-  /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
-  vertical-align: top;
+    /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
+    vertical-align: top;
 
-  /* Pour donner assez de place pour écrire du texte */
-  height: 5em;
+    /* Pour donner assez de place pour écrire du texte */
+    height: 5em;
 }
+
 .button {
-  /* Pour placer le bouton à la même position que les champs texte */
-  padding-left: 90px; /* même taille que les étiquettes */
+    /* Pour placer le bouton à la même position que les champs texte */
+    padding-left: 90px;
+    /* même taille que les étiquettes */
 }
 
 button {
-  /* Cette marge supplémentaire représente grosso modo le même espace que celui
+    /* Cette marge supplémentaire représente grosso modo le même espace que celui
      entre les étiquettes et les champs texte */
-  margin-left: .5em;
+    margin-left: .5em;
 }
