--- a/template/header.html
+++ b/template/header.html
@@ -1,3 +1,4 @@
 <header>
-    <div class='titre'>Un billet simple pour l'Alaska</div>
+    <p class="titre">Jean Forteroche - Un aller simple pour l'Alaska <img src="template/img/avion.png" /></p>
+    
 </header>
