Ajout  edition article

--- a/template/header.html
+++ b/template/header.html
@@ -1,4 +1,3 @@
 <header>
-    <p class="titre">Jean Forteroche - Un aller simple pour l'Alaska <img src="template/img/avion.png" /></p>
-    
+    <p class="titre">Jean Forteroche - Un aller simple pour l'Alaska <img src="http://localhost/ocr-projet4/template/img/avion.png" /></p>
 </header>
