--- a/template/nav_left.html
+++ b/template/nav_left.html
@@ -1,5 +1,5 @@
-
     <nav>
+        <P><h3>Menu</h3></P>
         <ul>
             <li><a href="index.php">Accueil</a></li>
             <li><a href="_admin/admin.php">Administration</a></li>
