--- a/template/footer.html
+++ b/template/footer.html
@@ -1,5 +1,3 @@
 <footer class="page-footer font-small blue pt-4">
-        <div class="footer-copyright text-center py-3">© 2018 Copyright:
-            <a href="http://www.projet4.arnaudbesnard.fr"> Jean Rocheforte</a>
-        </div>
-    </footer>
+    <div class="footer-copyright text-center py-3">© 2018 Copyright: <a href="http://www.projet4.arnaudbesnard.fr"> Jean Rocheforte</a></div>
+</footer>
