--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     background-color: white;
 }
 
-header {
+/*header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -15,7 +15,7 @@ header {
     border-bottom: 1px solid rgba(200, 200, 200, 0.5);
     background-color: lightblue;
     box-shadow: 0 0 10px black;
-}
+}*/
 
 .titre {
     font-size: 2em;
@@ -39,6 +39,7 @@ li {
     margin-top: 10px;
 }
 nav {
+    margin-top: 10px;
     padding: 15px 0;
     background-color: gray;
     height: auto;
