--- a/template/header.html
+++ b/template/header.html
@@ -1,3 +1,20 @@
 <header>
-    <p class="titre">Jean Forteroche - Un aller simple pour l'Alaska <img src="http://localhost/ocr-projet4/template/img/avion.png" /></p>
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Jean Forteroche</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="../index.php">Accueil<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="_admin/admin.php">Administration</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
 </header>
