--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ nav a:hover{
 }
 .contenu {
     width: 100%;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: justify;
     background-color: antiquewhite;
     padding: 10px;
@@ -64,7 +65,8 @@ nav a:hover{
     width: 100%;
     font-size: 0.8em;
     color: blue;
-    text-align: right;
+    text-align: left;
+    margin-left: 10px;
 }
 
 .date_billet {
@@ -74,7 +76,28 @@ nav a:hover{
     text-align: left;
     margin-left: 10px;
 }
-
+.btn{
+    margin-left: 10px;
+}
+.btn a{
+    color: white;
+    text-decoration: none;
+}
+.btn a:hover{
+    color: white;
+    text-decoration: none;
+}
+.btnGestion {
+    text-align: right;
+}
+.btnGestion a{
+    text-decoration: none;
+    color: white;
+}
+.btnGestion a:hover{
+    text-decoration: none;
+    color: white;
+}
 /*********************FORMULAIRE AJOUT BILLET****************************/
 
 form {
