--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
-    height: 110px;
+    margin-bottom: 90px;
     border-bottom: 1px solid rgba(200, 200, 200, 0.5);
-    background-color: lightblue;
     box-shadow: 0 0 10px black;
 }*/
 
@@ -38,17 +36,20 @@ h2 {
 li {
     margin-top: 10px;
 }
-nav {
-    margin-top: 10px;
+.articles{
+    margin-top: 90px;
+}
+.menuAdmin {
+    margin-top: 100px;
     padding: 15px 0;
     background-color: gray;
     height: auto;
 }
-nav a{
+.menuAdmin a{
     padding: 15px;
     color: white;
 }
-nav a:hover{
+.menuAdmin a:hover{
     color: white;
 }
 .contenu {
