--- a/template/header.html
+++ b/template/header.html
@@ -1,23 +1,18 @@
 <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=x033aj159s617dv6p04ex8cf9h6t37eytyjtfami5oah5xsg"></script>
 <script>tinymce.init({ selector:'textarea' });</script>
 <header>
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark ">
-        <a class="navbar-brand" href="#">Jean Forteroche</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#"><img src="http://localhost/ocr-projet4/template/img/avion.png"/></a>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.php">Accueil<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="_admin/admin.php">Administration</a>
-                </li>
-            </ul>
-
-        </div>
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost/ocr-projet4/index.php">Accueil</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost/ocr-projet4/_admin/admin.php">Administration</a>
+            </li>
+        </ul>
     </nav>
 </header>
-
