Add single.php & rename class

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ li {
     text-decoration: none;
     color: white;
 }
-/*********************FORMULAIRE AJOUT BILLET****************************/
+/******************************FORMULAIRES****************************/
 
 form {
     margin: 0 auto;
