--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: gray;
 }
 
 /*header {
@@ -36,11 +36,12 @@ h2 {
 li {
     margin-top: 10px;
 }
+
 .articles{
     margin-top: 90px;
 }
 .menuAdmin {
-    margin-top: 100px;
+    margin-top: 10px;
     padding: 15px 0;
     background-color: gray;
     height: auto;
