--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,10 @@ body {
     border-bottom: 1px solid rgba(200, 200, 200, 0.5);
     box-shadow: 0 0 10px black;
 }*/
-
+.menuHeader{
+    display: flex;
+    justify-content: flex-end;
+}
 .titre {
     font-size: 2em;
     color: black;
