--- a/public/template/adminNav.html
+++ b/public/template/adminNav.html
@@ -1,12 +1,15 @@
 <nav class="menuAdmin">
     <ul class="nav flex-column">
         <li><a href="index.php">Revenir au blog</a></li>
-        <span>Gestion articles</span>
+        <span><center>Gestion des articles</center></span>
         <li><a href="index.php?page=addPost">Ajout d'un billet</a></li>
         <li><a href="index.php?page=administration">Gestion des billets</a></li>
         <br/>
-        <span>Gestion utilisateurs</span>
+        <span><center>Gestion des utilisateurs</center></span>
         <li><a href="index.php?page=createUser">Ajouter un utilisateur</a></li>
         <li><a href="index.php?page=viewUser">Voir les utilisateurs</a></li>
+        <span><center>Gestion des commentaires</center></span>
+        <li><a href="#">Voir les commentaires</a></li>
+        <li><a href="#">Modérerations</a></li>
     </ul>
 </nav>
