--- a/public/template/adminNav.html
+++ b/public/template/adminNav.html
@@ -9,7 +9,7 @@
         <li><a href="index.php?page=createUser">Ajouter un utilisateur</a></li>
         <li><a href="index.php?page=viewUser">Voir les utilisateurs</a></li>
         <span><center>Gestion des commentaires</center></span>
-        <li><a href="#">Validation</a></li>
+        <li><a href="index.php?page=validComment">Validation</a></li>
         <li><a href="#">Modéreration</a></li>
     </ul>
 </nav>
