--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    margin-bottom: 90px;
+    margin-bottom: 35px;
 }
 
 .menuHeader{
@@ -17,7 +17,7 @@ header {
 .titre {
     font-size: 2em;
     color: black;
-    padding-top: 35px;
+    /*padding-top: 35px;*/
     text-align: center;
 }
 
@@ -37,7 +37,7 @@ li {
 }
 
 .articles{
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     margin-left: 50px;
 }
 .titreComment{
