--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,6 +102,7 @@ li {
     padding: 15px 0;
     background-color: gray;
     height: auto;
+    font-size: 0.8em;
 }
 .menuAdmin a{
     padding: 15px;
