--- a/public/template/footer.html
+++ b/public/template/footer.html
@@ -1,6 +1,44 @@
-<div class="container-fluid">
-    <footer class="page-footer font-small blue pt-4">
-        <div class="footer-copyright text-center py-3">© 2018 Copyright: <a href="http://www.projet4.arnaudbesnard.fr"> Jean Forteroche</a></div>
+
+    <footer class="page-footer font-small special-color-dark pt-4">
+
+        <!-- Footer Elements -->
+        <div class="container">
+
+            <!-- Social buttons -->
+            <ul class="list-unstyled list-inline text-center">
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-fb mx-1">
+                        <i class="fa fa-facebook" style="font-size:32px"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-tw mx-1">
+                        <i class="fa fa-twitter" style="font-size:32px"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-gplus mx-1">
+                        <i class="fa fa-google-plus" style="font-size:32px"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-li mx-1">
+                        <i class="fa fa-linkedin" style="font-size:32px"> </i>
+                    </a>
+                </li>
+            </ul>
+            <!-- Social buttons -->
+
+        </div>
+        <!-- Footer Elements -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2018 Copyright:
+            <a href="http://projet4.arnaudbesnard.fr">Jean Forteroche</a>
+        </div>
+        <!-- Copyright -->
+
     </footer>
-</div>
+    <!-- Footer -->
+
 
