--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,9 +9,7 @@ body {
 header {
     margin-bottom: 35px;
 }
-/*.nav-item a:hover{
-    border-bottom: 3px solid rgba(200, 200, 200, 0.2);
-}*/
+
 .container-fluid{
     padding: 0;
 }
@@ -22,12 +20,12 @@ header {
     width: 100%;
     height: 365px;
     margin: 67px auto;
+    margin-bottom: 0px;
 }
 .titre_img{
     padding-top: 165px;
     padding-left: 50px;
     font-size: 2em;
-
     color: white;
 }
 
@@ -101,7 +99,7 @@ li {
     text-align: right;
 }
 .postTitleRight{
-    margin-top: 40px;
+   margin-top: 10px;
     text-align: center;
     font-size: 1.2em;
     font-weight: bold;
@@ -118,6 +116,13 @@ li {
 
 .postsTitlesList a:hover{
     color: black;
+}
+
+.biographie{
+    border-radius: 10px;
+    width: 195px;
+    height: auto;
+    margin-top: 65px;
 }
 .menuAdmin {
     margin-top: 10px;
