Ajout mentions légales

--- a/public/template/footer.html
+++ b/public/template/footer.html
@@ -34,7 +34,8 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2018 Copyright:
-            <a href="http://projet4.arnaudbesnard.fr">Jean Forteroche</a>
+            <a href="http://projet4.arnaudbesnard.fr">Jean Forteroche</a> |
+            <a href="index.php?action=mentionsLegales">Mentions légales</a>
         </div>
         <!-- Copyright -->
 
