--- a/public/template/footer.html
+++ b/public/template/footer.html
@@ -1,43 +1,36 @@
 
-    <footer class="page-footer font-small special-color-dark pt-4">
-
-        <!-- Footer Elements -->
-        <div class="container">
-
-            <!-- Social buttons -->
-            <ul class="list-unstyled list-inline text-center">
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-fb mx-1">
-                        <i class="fa fa-facebook" style="font-size:32px"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-tw mx-1">
-                        <i class="fa fa-twitter" style="font-size:32px"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-gplus mx-1">
-                        <i class="fa fa-google-plus" style="font-size:32px"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-li mx-1">
-                        <i class="fa fa-linkedin" style="font-size:32px"> </i>
-                    </a>
-                </li>
-            </ul>
-            <!-- Social buttons -->
-
-        </div>
-        <!-- Footer Elements -->
-
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2018 Copyright:
-            <a href="http://projet4.arnaudbesnard.fr">Jean Forteroche</a> |
-            <a href="index.php?action=mentionsLegales">Mentions légales</a>
-        </div>
-        <!-- Copyright -->
-
-    </footer>
-    <!-- Footer -->
+<footer class="bg-dark text-white mt-4">
+    <div class="container-fluid">
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+                <a class="btn-floating btn-fb mx-1">
+                    <i class="fa fa-facebook"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn-floating btn-tw mx-1">
+                    <i class="fa fa-twitter"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn-floating btn-gplus mx-1">
+                    <i class="fa fa-google-plus"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn-floating btn-li mx-1">
+                    <i class="fa fa-linkedin"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn-floating btn-dribbble mx-1">
+                    <i class="fa fa-dribbble"> </i>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+        <a id="footerLink" href="https://projet4.arnaudbesnard.fr/"> Jean Forteroche - Un billet simple pour l'Alaska</a> |
+        <a id="footerLink" href="index.php?action=mentionsLegales">Mentions légales</a>
+    </div>
+</footer>
