--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,7 +200,7 @@ a.dropdown-item:hover{
 
 form {
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
     padding: 1em;
     border: 1px solid #CCC;
     border-radius: 0.5em;
@@ -213,38 +213,24 @@ label {
 }
 input,
 textarea {
-    /* Pour s'assurer que tous les champs texte ont la même police.
-     Par défaut, les textarea ont une police monospace */
     font: 1em sans-serif;
-
-    /* Pour que tous les champs texte aient la même dimension */
     width: 600px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-
-    /* Pour harmoniser le look & feel des bordures des champs texte */
     border: 1px solid #999;
 }
 input:focus,
 textarea:focus {
-    /* Pour souligner légèrement les éléments actifs */
     border-color: #000;
 }
 textarea {
-    /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
     vertical-align: top;
-
-    /* Pour donner assez de place pour écrire du texte */
     height: 5em;
 }
 .button {
-    /* Pour placer le bouton à la même position que les champs texte */
     padding-left: 90px;
-    /* même taille que les étiquettes */
 }
 button {
-    /* Cette marge supplémentaire représente grosso modo le même espace que celui
-     entre les étiquettes et les champs texte */
     margin-left: .5em;
 }
 .btn {
@@ -286,7 +272,7 @@ footer {
 /****************************************RESPONSIVE****************************************/
 /******************************************************************************************/
 
-@media screen and (min-width: 480px) and (max-width: 1152px) {
+@media screen and (min-width: 320px) and (max-width: 1152px) {
 
     .navNormal{
         display:none;
@@ -295,14 +281,16 @@ footer {
         display: block;
     }
     .main {
-        margin-top: 40px;
+       margin-top: 50px;
         margin-left:0;
         margin-right:0;
     }
-    #imgPost {
-        width: 700px;
-        height: auto;
-        margin:0;
+    .travel_train {
+        display: none;
+    }
+    .titre {
+        font-size: 1.5em;
+        text-align: left;
     }
     .biographie{
         display:none;
@@ -316,56 +304,7 @@ footer {
     .postsTitlesList {
         display:none;
     }
-    .travel_train {
-        display:none;
-    }
-    .menuAdmin{
-        display:none;
-    }
-}
 
-@media screen and (max-width: 480px) {
-
-    html,
-    body {
-        width: 100%;
-    }
-    .navNormal{
-        display:none;
-    }
-    .navResponsive{
-        display: block;
-    }
-    #AvionHeader{
-        display:none;
-    }
-    #imgPost {
-        width: 310px;
-        height: auto;
-        margin:auto;
-    }
-    .travel_train {
-        display:none;
-    }
-    .biographie{
-        display:none;
-    }
-    #textBiographie{
-        display:none;
-    }
-    .postTitleRight {
-        display:none;
-    }
-    .postsTitlesList {
-        display:none;
-    }
-    .main {
-        width: 310px;
-        margin-top: 120px;
-    }
-    .contenu{
-        width: 310px;
-    }
     .menuAdmin{
         display:none;
     }
