--- a/public/template/footer.html
+++ b/public/template/footer.html
@@ -30,7 +30,7 @@
         </ul>
     </div>
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
-        <a id="footerLink" href="https://projet4.arnaudbesnard.fr/"> Jean Forteroche - Un billet simple pour l'Alaska</a> |
+        Jean Forteroche - Un billet simple pour l'Alaska |
         <a id="footerLink" href="index.php?action=mentionsLegales">Mentions légales</a>
     </div>
 </footer>
